--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,7 @@
 
   <p>
     If you already have an account, go ahead and <a href="{% url 'login' %}">log in</a>.
-      If you are new to SeRAJ, contact your department educational administratives or your professor in order to get an account.</a>.
+      If you are new to SeRAJ, register <a href="{% url 'professors:professors_add' %}">as a professor</a> or <a href="{% url 'login' %}">as a student.</a>.
   </p>
 
 {% endblock %}
