--- a/app/templates/professor_HomeView.html
+++ b/app/templates/professor_HomeView.html
@@ -3,9 +3,5 @@
 {% block content %}
 <a href="{% url 'reservations:reservation_create' %}" class="btn btn-primary" role="button">Reservation</a>
 <br>
-<a href="{% url 'rooms:rooms_list' %}" class="btn btn-primary" role="button">Rooms</a>
+<a href="{% url 'rooms:groups_list' %}" class="btn btn-primary" role="button">Rooms</a>
 {% endblock %}
-
-
-
-
