--- a/app/reservation/templates/reservation/reservation_listView.html
+++ b/app/reservation/templates/reservation/reservation_listView.html
@@ -15,6 +15,8 @@
           <th>Title</th>
           <th>User</th>
           <th>Requested Room</th>
+          <th>Approver</th>
+          <th>State</th>
           <th></th>
         </tr>
       </thead>
@@ -24,8 +26,10 @@
             <td class="align-middle">{{ reservation.title }}</td>
             <td class="align-middle">{{ reservation.user }}</td>
             <td class="align-middle">{{ reservation.room }}</td>
+            <td class="align-middle">{% if reservation.approver %}{{ reservation.approver }}{% else %}No Approver{% endif %}</td>
+            <td class="align-middle">{{ reservation.get_status_display }}</td>
             <td class="text-right">
-              <a href="{% url 'reservations:reservation_view' reservation.pk %}" class="btn btn-primary">View Request</a>
+              {% if 'rooms.'|add:reservation.room.group.own.codename in perms or 'rooms.'|add:reservation.room.group.approve.codename in perms %}<a href="{% url 'reservations:reservation_view' reservation.pk %}" class="btn btn-primary">View Request</a>{% endif %}
             </td>
           </tr>
         {% empty %}
